# transformer

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  download_models.py  email.env.example  generate.py  infer-docker.sh  infer.sh  model.py  requirements.txt  send_note.py  serve.py  setup-docker.ps1  setup-docker.sh  setup.sh  start-inference.bat  start-training.bat  test.py  tools_gen_evolution.py  train-docker.sh  train.py  train.sh
cuda/: CMakeLists.txt  monitor_and_notify.sh  monitor_train.sh  tools_convert_chatml.py  tools_convert_everyday.py  tools_convert_wildchat.py
cuda/include/: checkpoint.cuh  common.cuh  data.hpp  gemm.cuh  kernels.cuh  layers.cuh  tensor.cuh
cuda/src/: generate_server.cu  kernels.cu  layers.cu  main.cu  probe.cu
data/: sample_conversations.json  tiny_corpus.txt
docker/: entrypoint-train.sh  inference.Dockerfile  train.Dockerfile
docs/: continue-training-from-usb.md  monitoring.md
tokenizer/: CMakeLists.txt  LICENSE  build.sh  build_py_client.sh  demo_bindings.py  setup.py  train.sh
tokenizer/include/: bpe_model.hpp  bpe_trainer.hpp  common.hpp  corpus_reader.hpp  pretokenizer.hpp  unicode_utils.hpp
tokenizer/src/: bpe_model.cpp  bpe_trainer.cpp  corpus_reader.cpp  pretokenizer.cpp  unicode_utils.cpp
tokenizer/tools/: encode_cli.cpp  remap_specials.cpp  test_tokenizer.cpp  train_tokenizer.cpp
tools/: README.md  convert_everyday_conversations.py  download_models.py  gen_evolution.py  send_note.py
utils/: AttnHead.py  Embedding.py  LayerNorm.py  MLP.py  MultiHeadAttention.py  RMSNorm.py  SwiGLU.py  TransformerBlock.py  chat.py  checkpoint.py  ckpt_convert.py  fp8.py  generate.py  losses.py  notify.py  softmax.py  tokenizer.py
web/: app.js  index.html  style.css
web/data/: evolution.json
